--- a/templates/index.html
+++ b/templates/index.html
@@ -4,6 +4,7 @@
 <head> 
     <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
     <link rel="stylesheet" type="text/css" href="../static/styles/style.css">
+    <script src="https://cdn.plot.ly/plotly-2.12.1.min.js"></script> 
 </head>
 
 
@@ -20,7 +21,7 @@
 
     </figure>
 
-<!-- <script src="plotly.min.js"></script> -->
+
 <script src="../static/js/main.js"></script>
 </body>
 
