--- a/templates/index.html
+++ b/templates/index.html
@@ -1,10 +1,10 @@
 <!doctype html>
 <html>
-
+<!-- https://cdn.plot.ly/plotly-2.12.1.min.js -->
 <head> 
     <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
     <link rel="stylesheet" type="text/css" href="../static/styles/style.css">
-    <script src="https://cdn.plot.ly/plotly-2.12.1.min.js"></script> 
+    <script src="https://cdn.plot.ly/plotly-latest.min.js "></script> 
 </head>
 
 
