--- a/templates/index.html
+++ b/templates/index.html
@@ -1,10 +1,11 @@
 <!doctype html>
 <html>
-<!-- https://cdn.plot.ly/plotly-2.12.1.min.js -->
+
 <head> 
     <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
     <link rel="stylesheet" type="text/css" href="../static/styles/style.css">
     <script src="https://cdn.plot.ly/plotly-latest.min.js "></script> 
+    <script src="../static/js/p5.min.js"></script>
 </head>
 
 
@@ -20,8 +21,16 @@
         <div id="chart2" width="200" height="80"></div>
 
     </figure>
+    <div  id="Unit-circle">
+        <div id="Z-plane"></div>
+        <div id="unit-circle-buttons">
+            <button id="zero" class=" mode-control">Add Zeros</button>
+            <button id="pole" class=" mode-control">Add Poles</button>
+            <button id="delet" >Delet</button>
+        </div>
+    </div>
 
-
+<script src="../static/js/Unitcircle.js"></script>
 <script src="../static/js/main.js"></script>
 </body>
 
