--- a/templates/index.html
+++ b/templates/index.html
@@ -7,6 +7,8 @@
     <script src="https://cdn.plot.ly/plotly-latest.min.js "></script> 
     <script src="../static/js/p5.min.js"></script>
     <script src="../static/js/papaparse.min.js"></script>
+    <script src="../static/js/plotly-2.8.3.min.js"></script>
+    <title>Digital Filter Design</title>
 </head>
 
 
@@ -29,17 +31,27 @@
 
     </figure>
 
-    <div  id="Unit-circle">
-        <div id="Z-plane"></div>
-        <div id="unit-circle-buttons">
-            <button id="zero" class=" mode-control">Add Zeros</button>
-            <button id="pole" class=" mode-control">Add Poles</button>
-            <button id="delet" >Delete</button>
-        </div>
-    </div>
-
+	<section id="filter-design">
+		<div id="design-unit-circle">
+			<h2 id="circle-title">Digital Filter Design</h2>
+			<div id="circle-canvas"></div>
+			<div id="circle-control">
+				<button id="zero" class="btn-cricle-control mode-control">Add Zeros</button>
+				<button id="pole" class="btn-cricle-control mode-control">Add Poles</button>
+				<button id="remove" class="btn-cricle-control">Remove</button>
+			
+			</div>
+		</div>
+		<div  id="filter-response">
+			<h4 >Magnitude Response</h4>
+			<div id="filter-mag-response" class="response-plotting"> </div>
+			<h4 >Phase Response</h2>
+				<div id="filter-phase-response" class="response-plotting"> </div>
+		</div>
+	</section>
 
 <script src="../static/js/Unitcircle.js"></script>
+<script src="../static/js/plotting.js"></script>
 <script src="../static/js/main.js"></script>
 </body>
 
