--- a/templates/index.html
+++ b/templates/index.html
@@ -8,6 +8,7 @@
     <script src="../static/js/p5.min.js"></script>
     <script src="../static/js/papaparse.min.js"></script>
     <script src="../static/js/plotly-2.8.3.min.js"></script>
+	<script src='https://cdnjs.cloudflare.com/ajax/libs/mathjs/9.2.0/math.js'></script>
     <title>Digital Filter Design</title>
 </head>
 
@@ -31,27 +32,78 @@
 
     </figure>
 
-	<section id="filter-design">
-		<div id="design-unit-circle">
-			<h2 id="circle-title">Digital Filter Design</h2>
-			<div id="circle-canvas"></div>
-			<div id="circle-control">
-				<button id="zero" class="btn-cricle-control mode-control">Add Zeros</button>
-				<button id="pole" class="btn-cricle-control mode-control">Add Poles</button>
-				<button id="remove" class="btn-cricle-control">Remove</button>
-			
+	
+	<div id="design-unit-circle">
+		<h2 id="circle-title">Digital Filter Design</h2>
+		<div id="circle-canvas"></div>
+		<div id="circle-control">
+			<button id="zero" class="btn-cricle-control mode-control">Add Zeros</button>
+			<button id="pole" class="btn-cricle-control mode-control">Add Poles</button>
+			<button id="remove" class="btn-cricle-control">Remove</button>
+		
+		</div>
+	</div>
+	<div  id="filter-response">
+		<h4 >Magnitude Response</h4>
+		<div id="filter-mag-response" class="response-plotting"> </div>
+		<h4 >Phase Response</h2>
+			<div id="filter-phase-response" class="response-plotting"> </div>
+	</div>
+	<!-- <div id="page2">
+		<button id="phase-correction" onclick="redirect()">Correct Phase</button>
+		<script>
+			function redirect(){
+				window.location.assign("allPass.html");
+			}
+		</script>
+	</div> -->
+	<div class="box" id="all-pass-unit-circle">
+		<h2 id="all-pass-title" class="title">All Pass Filter Design</h2>
+		<div id="all-pass-container">
+			<div id="list1" class="dropdown-check-list" tabindex="100">
+				<span class="anchor btn">All Pass Filter Coefficients</span>
+				<ul id="listOfA" class="items">
+					<li><input class="target1" type="checkbox" data-avalue="1" />1</li>
+					<li><input class="target1" type="checkbox" data-avalue="0.1" />0.1 </li>
+					<li><input class="target1" type="checkbox" data-avalue="0.5" />0.5</li>
+					<li><input class="target1" type="checkbox" data-avalue="-0.9" />-0.9</li>
+					<li><input class="target1" type="checkbox" data-avalue="-0.45" />-0.45</li>
+					<li><input class="target1" type="checkbox" data-avalue="0.78" />0.78</li>
+					<li><input class="target1" type="checkbox" data-avalue="0.99" />0.99</li>
+					<li><input class="target1" type="checkbox" data-avalue="0.358" />0.358</li>
+					<li><input class="target1" type="checkbox" data-avalue="0.836" />0.836</li>
+				</ul>
 			</div>
+			<label for="real">Real Part:</label>
+			<input type="number" id="real" name="Real Part" min="-5" max="5">
+			<label for="imaginary">Imaginary Part:</label>
+			<input type="number" id="imaginary" name="Imaginary Part" min="-5" max="5">
+			<button id="new-all-pass-coef" class="btn">Add</button>
 		</div>
-		<div  id="filter-response">
-			<h4 >Magnitude Response</h4>
-			<div id="filter-mag-response" class="response-plotting"> </div>
-			<h4 >Phase Response</h2>
-				<div id="filter-phase-response" class="response-plotting"> </div>
+		<div >
+			<div id="all-pass-phase-response" class="response-plotting"> </div>
 		</div>
-	</section>
-
+		<div >
+			<div id="final-filter-phase-response" class="response-plotting"> </div>
+		</div>
+	</div>
+	<!-- <div class="catalogue">
+		<img class="image" src="static/img/1.jpeg">
+		<img class="image" src="static/img/0.1.jpeg">
+		<img class="image" src="static/img/0.5.jpeg">
+		<img class="image" src="static/img/-0.45.jpeg">
+		<img class="image" src="static/img/0.358.jpeg">
+		<img class="image" src="static/img/0.99.jpeg">
+		<img class="image" src="static/img/0.836.jpeg">
+		<img class="image" src="static/img/0.78.jpeg">
+		<img class="image" src="static/img/-0.9.jpeg">
+	</div> -->
+	
+	
+	
 <script src="../static/js/Unitcircle.js"></script>
 <script src="../static/js/plotting.js"></script>
+<script src="../static/js/Allpass.js"></script>
 <script src="../static/js/main.js"></script>
 </body>
 
