--- a/templates/correctPhase.html
+++ b/templates/correctPhase.html
@@ -7,7 +7,7 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Digital Filter Design</title>
+        <title>All Pass Filter Design</title>
         <link rel="stylesheet" href="../static/styles/style.css" />
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
         <script src="../static/java script/jquery-3.6.2.min.js"></script>
@@ -19,10 +19,10 @@
 
     </head>
     <body>
-        <div class="box" id="all-pass-unit-circle">
-            <h2 id="all-pass-title" class="title">All Pass Filter Design</h2>
-            <div id="all-pass-container">
-                <div id="list1" class="dropdown-check-list" tabindex="100">
+        <!-- <div class="box" id="all-pass-unit-circle"> -->
+            <!-- <h2 id="all-pass-title" class="title">All Pass Filter Design</h2> -->
+            <!-- <div id="all-pass-container"> -->
+                <!-- <div id="list1" class="dropdown-check-list" tabindex="100">
                     <span class="anchor btn">All Pass Filter Coefficients</span>
                     <ul id="listOfA" class="items">
                         <li><input class="target1" type="checkbox" data-avalue="1" />1</li>
@@ -35,20 +35,20 @@
                         <li><input class="target1" type="checkbox" data-avalue="0.358" />0.358</li>
                         <li><input class="target1" type="checkbox" data-avalue="0.836" />0.836</li>
                     </ul>
-                </div>
+                </div> -->
                 <label for="real">Real Part:</label>
                 <input type="number" id="real" name="Real Part" min="-5" max="5">
                 <label for="imaginary">Imaginary Part:</label>
                 <input type="number" id="imaginary" name="Imaginary Part" min="-5" max="5">
-                <button id="new-all-pass-coef" class="btn">Add</button>
+                <!-- <button id="new-all-pass-coef" class="btn">Add</button> -->
             </div>
             <div >
                 <div id="all-pass-phase-response" class="response-plotting"> </div>
             </div>
             <div >
                 <div id="final-filter-phase-response" class="response-plotting"> </div>
-            </div>
-        </div>
+            <!-- </div> -->
+        <!-- </div> -->
         <!-- <div class="catalogue">
             <img class="image" src="static/img/1.jpeg">
             <img class="image" src="static/img/0.1.jpeg">
