--- a/templates/index.html
+++ b/templates/index.html
@@ -24,7 +24,7 @@
 
 
 <body>
-	<div class="parent">
+	<div class="parent" id="filter">
 
 
 		<div class="element div1"> 
@@ -60,12 +60,7 @@
 
 	</div>
 
-	<div class="element div5"> 
 
-		<a href="../templates/correctPhase.html">		
-				<button class="btn btn-4 btn-sep icon-check"> Correct Phase</button>
-			</a>
-	</div>
 	<div class="element div6 lightel">
 		<h2>Phase Response</h2>
 		<div id="filter-phase-response" class="response-plotting"> </div>
@@ -101,8 +96,107 @@
 	</div>
 
 
+	<div class="element div5"> 
+				<button class="btn btn-4 btn-sep icon-check"  onclick="myFunction()" > Correct Phase</button>
+	</div>
 
 </div>
+
+
+	<div class="parent2" id="Allpass">
+	<div class="div12"> 
+		
+		<div id="list1" class="dropdown-check-list" tabindex="100">
+			<ul id="listOfA" class="items">
+				<li><input class="target1" type="checkbox" data-avalue="1" />1</li>
+				<li><input class="target1" type="checkbox" data-avalue="0.1" />0.1 </li>
+				<li><input class="target1" type="checkbox" data-avalue="0.5" />0.5</li>
+				<li><input class="target1" type="checkbox" data-avalue="-0.9" />-0.9</li>
+				<li><input class="target1" type="checkbox" data-avalue="-0.45" />-0.45</li>
+				<li><input class="target1" type="checkbox" data-avalue="0.78" />0.78</li>
+				<li><input class="target1" type="checkbox" data-avalue="0.99" />0.99</li>
+				<li><input class="target1" type="checkbox" data-avalue="0.358" />0.358</li>
+				<li><input class="target1" type="checkbox" data-avalue="0.836" />0.836</li>
+			</ul>
+		</div>
+
+
+
+	</div>
+	<div class="div13">
+		
+		<div id="image-slider">
+			<ul>
+				<li>          
+				<img class="image" src="static/img/1.jpeg">
+				</li>
+				<li>           
+				 <img class="image" src="static/img/0.1.jpeg">
+				</li>
+				<li>           
+					<img class="image" src="static/img/0.5.jpeg">
+				</li>
+				   <li>           
+					<img class="image" src="static/img/-0.45.jpeg">
+				</li>
+				<li>           
+					<img class="image" src="static/img/0.358.jpeg">
+				</li>
+				<li>           
+					<img class="image" src="static/img/0.99.jpeg">
+				</li>
+				<li>           
+					<img class="image" src="static/img/0.836.jpeg">
+				</li>
+				<li>           
+					<img class="image" src="static/img/0.78.jpeg">
+				</li>
+				<li>           
+					<img class="image" src="static/img/-0.9.jpeg">
+				</li>
+			</ul>
+	
+		</div>	
+
+		 </div>
+	<div class="div14"> 
+		<h2 class="title">ALL Pass Filters</h2>
+
+	</div>
+	<div class="div15">
+		<button class="btn btn-4 btn-sep icon-back"  onclick="GoBack()" >Back</button>
+
+	
+		 </div>
+	<div class="div16">
+
+		<h2 class="title">Final Phase</h2>
+
+		<div id="final-filter-phase-response" class="response-plotting"> </div>	</div>
+
+	<div class="div17"> 
+		<h2  class="title">All Pass Filter</h2>
+		<div id="all-pass-phase-response" class="response-plotting"> </div>
+
+	</div>
+	<div class="div18"> 
+		<button id="new-all-pass-coef" class="button-remove"><i class="fa-solid fa-plus"></i></button>
+
+	</div>
+	<div class="div19">
+		<div class="inputs">
+			<input type="number" id="real" name="Real Part" min="-5" max="5" placeholder="Real Part">
+			<input type="number" id="imaginary" name="Imaginary Part" min="-5" max="5" placeholder="Imaginary Part">
+	
+		</div>
+
+
+
+
+
+	</div>
+
+	</div>
 
 
 </body>
