--- a/templates/index.html
+++ b/templates/index.html
@@ -206,6 +206,7 @@
 <script src="../static/js/plotting.js"></script>
 <script src="../static/js/main.js"></script>
 <script src="../static/js/Allpass.js"></script>
+<script src="../static/js/App.js"></script>
 
 </html>
 
