Export filter back

--- a/templates/index.html
+++ b/templates/index.html
@@ -16,6 +16,7 @@
     <script src="../static/js/p5.min.js"></script>
     <script src="../static/js/papaparse.min.js"></script>
 	<script src='https://cdnjs.cloudflare.com/ajax/libs/mathjs/9.2.0/math.js'></script>
+	<script src="https://cdn.jsdelivr.net/npm/json2csv"></script>
 
 </head>
 
@@ -55,8 +56,7 @@
 
 	
 	<div class="element div4"> 
-		<button  class="btn btn-4 btn-sep icon-export">Export Filter</button>
-		
+		<button  class="btn btn-4 btn-sep icon-export" id="btnDownloadCsv">Export Filter</button>
 
 	</div>
 
