import zeros and poles

--- a/templates/index.html
+++ b/templates/index.html
@@ -29,7 +29,8 @@
 
 
 		<div class="element div1"> 
-            <button class="btn btn-4 btn-sep icon-import">Import Filter</button>
+            <input type="file" accept=".csv" id="csv2" class="btn btn-4 btn-sep icon-import">
+			<button  class="btn btn-4 btn-sep icon-export" id="import-filter" onclick="importfilter()">Import Filter</button>
         </div>
 
 
