--- a/templates/index.html
+++ b/templates/index.html
@@ -29,8 +29,8 @@
 
 
 		<div class="element div1"> 
-            <input type="file" accept=".csv" id="csv2" class="btn btn-4 btn-sep icon-import">
-			<button  class="btn btn-4 btn-sep icon-export" id="import-filter" onclick="importfilter()">Import Filter</button>
+            <input type="file" accept=".csv" id="csv2" onclick="importfilter()" class="btn btn-4 btn-sep icon-import">
+			<!-- <button  class="btn btn-4 btn-sep icon-export" id="import-filter" >Import Filter</button> -->
         </div>
     
     
